# sampled-approx-posteriors

./: .gitignore  README.md  pyproject.toml
Rcode/: h_function_viz.R
data/: synthetic_regression_1x.data
data/fireball/: LppdCum_sampling_bikesharing.npz  LppdCum_sampling_fmnist.npz  LppdCum_sampling_ionosphere.npz
data/fireball/mile_air/: LppdCum_sampling.npz  PredPerf_sampling.json
experiments/: __init__.py  laplace_approximation.py  mean_field_variational_inference.py  pool_results.py  save_traces.py
experiments/configs/: laplace_uci_benchmark.yaml  mfvi_uci_benchmark.yaml  mile_mean_regr_priors.yaml  mile_mean_regr_uci.yaml  nuts_vs_mfvi.yaml  permuted_warmstarts.yaml  priors_search.yaml  scale_regr_mile.yaml  tabular_search.yaml
experiments/figures/: cumulative_lppd.py  fireballs.py  functional_diversity.py  nuts_vs_mfvi.py  permutation_warmstart.py  product_weights.py  utils.py  wasserstein.py
src/: base_config.py  config.py  data.py  flax2bnn.py  models.py
src/abi/: __init__.py  laplace.py  mfvi.py  utils.py
src/sai/: __init__.py  __main__.py  exceptions.py  types.py  utils.py
src/sai/architectures/: __init__.py  components.py  tabular.py
src/sai/bnns/: __init__.py  logliks.py  priors.py
src/sai/config/: __init__.py  core.py  data.py  sampler.py  training.py  warmstart.py
src/sai/dataset/: __init__.py  base.py  tabular.py
src/sai/inference/: __init__.py  evaluation.py  metrics.py  predict.py  sample_loader.py  utils.py
src/sai/kernels/: __init__.py  base.py  warmup.py
src/sai/training/: callbacks.py  sampling.py  scheduler.py  (+2 more)
(+4 files in other folders)
